# cmake-example-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_example_external.sh  build_linux.sh  build_win.sh  test_compilation.sh
cmake/: LibraryConfig.cmake  SetEnv.cmake  Uninstall.cmake.in
example_external/: CMakeLists.txt  bar.cpp
example_internal/: CMakeLists.txt  bar.cpp
examples/: CMakeLists.txt
foo/: CMakeLists.txt  foo.cpp  foo.h  version.h.in
scripts/: build_example_external.sh  build_linux.sh  build_ninja.sh  build_win.sh
